(Theoretically) fixes the random overflow scrollbar issue (#874)

--- a/src/sweetalert2.scss
+++ b/src/sweetalert2.scss
@@ -110,6 +110,7 @@ body {
   left: 0;
   right: 0;
   bottom: 0;
+  overflow-x: hidden;
 
   // backdrop
   background-color: transparent;
